# realistic-fire-mod

./: .gitignore  build.gradle  gradle.properties  settings.gradle
scripts/: preview_flame.py
src/main/java/dev/zinnusl/realisticfire/: RealisticFire.java
src/main/java/dev/zinnusl/realisticfire/api/: FireApi.java
src/main/java/dev/zinnusl/realisticfire/client/: ClientFireDistortion.java  ClientFireParticles.java  ClientFireRenderer.java  ClientFireShaders.java  ClientFireSounds.java  ClientFireVisuals.java
src/main/java/dev/zinnusl/realisticfire/command/: RealisticFireCommands.java
src/main/java/dev/zinnusl/realisticfire/config/: RealisticFireConfig.java
src/main/java/dev/zinnusl/realisticfire/events/: RealisticFireEvent.java
src/main/java/dev/zinnusl/realisticfire/mixin/: FireBlockMixin.java
src/main/java/dev/zinnusl/realisticfire/nativebridge/: RealisticFireNativeSolver.java
src/main/java/dev/zinnusl/realisticfire/network/: ClientboundFireVisualDeltaPayload.java  RealisticFireNetwork.java
src/main/java/dev/zinnusl/realisticfire/registry/: FireLightBlock.java  RealisticFireBlocks.java
src/main/resources/: realisticfire.mixins.json
src/main/resources/assets/realisticfire/blockstates/: ash.json  charred_block.json  charred_turf.json
src/main/resources/assets/realisticfire/lang/: en_us.json
src/main/rust/realisticfire_solver/: Cargo.toml
src/main/rust/realisticfire_solver/src/: lib.rs
tools/fire-editor/: README.md  build.sh  editor.js  index.html  realisticfire_solver.wasm  style.css
(+34 files in other folders)
