[package]
name = "realisticfire-solver"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "realisticfire_solver"
crate-type = ["rlib", "cdylib"]

# The JNI bridge is only built for the native shared library that the mod loads.
# The WebAssembly build (parameter editor) compiles the same simulation core without it.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jni = "0.21"
